--- a/app/src/main/res/layout/layout_nav_header.xml
+++ b/app/src/main/res/layout/layout_nav_header.xml
@@ -11,23 +11,23 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/user_icon"
+        android:id="@+id/TouXiang01"
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:layout_centerVertical="true"
         android:layout_margin="15dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/headerph"/>
 
     <TextView
         android:id="@+id/id_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/user_icon"
+        android:layout_alignBottom="@+id/TouXiang01"
         android:layout_marginBottom="19dp"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
-        android:layout_toEndOf="@+id/user_icon"
-        android:layout_toRightOf="@+id/user_icon"
+        android:layout_toEndOf="@+id/TouXiang01"
+        android:layout_toRightOf="@+id/TouXiang01"
         android:text="用户名"
         android:textStyle="bold" />
 
