--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -7,32 +7,33 @@
     android:layout_height="match_parent"
     tools:context="com.example.asus.ourfirst.view.activity.MainActivity">
 
-    <android.support.design.widget.CoordinatorLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/mToolBar"
+        android:layout_width="match_parent"
+        android:layout_height="50sp"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        >
+    </android.support.v7.widget.Toolbar>
+
+    <!--主布局内容-->
+    <FrameLayout
         android:id="@+id/main_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <com.hjm.bottomtabbar.BottomTabBar
-            android:id="@+id/bottomtabbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true" />
-
-    </android.support.design.widget.CoordinatorLayout>
+        android:layout_height="match_parent" />
 
     <!--导航菜单-->
     <android.support.design.widget.NavigationView
         android:id="@+id/view_navigation"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#e4577a"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/layout_nav_header"
         app:itemIconTint="@color/colorAccent"
         app:itemTextColor="@color/textBlack"
-        app:menu="@menu/navigation_menu">
-
-    </android.support.design.widget.NavigationView>
+        app:menu="@menu/navigation_menu" />
 
 </android.support.v4.widget.DrawerLayout>
