--- a/app/src/main/res/layout/fragment_rrosstalk.xml
+++ b/app/src/main/res/layout/fragment_rrosstalk.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.asus.ourfirst.view.fragment.Fragment01">
+    tools:context="com.example.asus.ourfirst.view.fragment.RrossTalkFragment">
 
     <!-- TODO: Update blank fragment layout -->
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="地方规划" />
+        android:background="@color/colorAccent"
+        android:text="5555" />
 
 </FrameLayout>
