--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0BAAF4</color>
+    <color name="colorPrimary">#5886FE</color>
     <color name="colorPrimaryDark">#0BAAF4</color>
-    <color name="colorAccent">#cccccc</color>
+    <color name="colorAccent">@color/textBlack</color>
 
     <color name="textBlack">#000000</color>
-    <color name="colorNight">#EEC851</color>
 
 </resources>
