--- a/app/src/main/res/layout/fragment_fragment01.xml
+++ b/app/src/main/res/layout/fragment_fragment01.xml
@@ -2,13 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     tools:context="com.example.asus.ourfirst.view.fragment.Fragment01">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="地方规划" />
+        <ImageView
+            android:layout_gravity="center"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:background="@drawable/da"
+            />
 
 </FrameLayout>
+
