--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,46 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.asus.ourfirst.view.activity.SecondActivity"
     android:background="@mipmap/loginpicture"
+    tools:context="com.example.asus.ourfirst.view.activity.SecondActivity"
 
     >
 
-        <ImageView
-            android:id="@+id/imageback"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="23dp"
-            android:layout_marginStart="23dp"
-            android:layout_marginTop="17dp"
-            android:background="@mipmap/rawback" />
+    <ImageView
+        android:id="@+id/imageback"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="23dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="17dp" />
 
+    <Button
+        android:id="@+id/weixinbutton"
+        android:layout_width="180dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="141dp"
+        android:background="@drawable/weixingbtn"
+        android:gravity="center"
+        android:text="微信登录"/>
 
-        <Button
-            android:layout_width="180dp"
-            android:layout_height="40dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="141dp"
-            android:background="@drawable/weixingbtn"
-            android:gravity="center"
-            android:id="@+id/weixinbutton"
-            android:text="微信登录"
-            >
-        </Button>
-        <Button
-            android:layout_width="180dp"
-            android:layout_height="40dp"
-            android:layout_alignLeft="@+id/button"
-            android:layout_alignStart="@+id/button"
-            android:layout_alignTop="@+id/button"
-            android:layout_marginTop="61dp"
-            android:background="@drawable/qqbtn"
-            android:gravity="center"
-            android:text="QQ登录"
-            />
+    <Button
+        android:layout_width="180dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="61dp"
+        android:background="@drawable/qqbtn"
+        android:gravity="center"
+        android:text="QQ登录" />
 
 </RelativeLayout>
