--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">@color/textBlack</color>
 
     <color name="textBlack">#000000</color>
+    <color name="textColor">#cccccc</color>
 
 </resources>
